--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>developer-portfolio</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    <h1>Hello world!</h1>
-</body>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <section class="top-banner">
+      <div class="half-width">
+        <!-- header text section -->
+        <h1>Welcome to</h1>
+        <h1><span style="color: orange">Riajul Islam </span>World!</h1>
+        <h3>Building Climber and Train Stopper</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias
+          doloremque architecto consequatur dignissimos! Illum rem maiores
+          aspernatur, incidunt pariatur reprehenderit sint non porro, animi iste
+          sit saepe soluta rerum illo!
+        </p><br>
+        <a class="click-btn" href="https://www.facebook.com/connectriaj/" target="_blank">Hire Me</a>
+      </div>
+      <!-- header image section -->
+      <div class="half-width">
+        <img src="./images/riaj-1.png" alt="" />
+      </div>
+    </sectionc>
+  </body>
 </html>
