dream big adeded

--- a/index.html
+++ b/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>developer-portfolio</title>
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
-  <body>
-    <section class="top-banner">
-      <div class="half-width">
-        <!-- header text section -->
-        <h1>Welcome to</h1>
-        <h1><span style="color: orange">Riajul Islam </span>World!</h1>
-        <h3>Building Climber and Train Stopper</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias
-          doloremque architecto consequatur dignissimos! Illum rem maiores
-          aspernatur, incidunt pariatur reprehenderit sint non porro, animi iste
-          sit saepe soluta rerum illo!
-        </p><br>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>developer-portfolio</title>
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
+
+<body>
+  <section class="top-banner">
+    <div class="half-width">
+      <!-- header text section -->
+      <h1>Welcome to</h1>
+      <h1><span style="color: orange">Riajul Islam </span>World!</h1>
+      <h3>Building Climber and Train Stopper</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias
+        doloremque architecto consequatur dignissimos! Illum rem maiores
+        aspernatur, incidunt pariatur reprehenderit sint non porro, animi iste
+        sit saepe soluta rerum illo!
+      </p>
+      <div class="link-btn">
         <a class="click-btn" href="https://www.facebook.com/connectriaj/" target="_blank">Hire Me</a>
       </div>
-      <!-- header image section -->
-      <div class="half-width">
-        <img src="./images/riaj-1.png" alt="" />
+    </div>
+    <!-- header image section -->
+    <div class="half-width">
+      <img src="./images/riaj-1.png" alt="" />
+    </div>
+  </section>
+  <!-- here is the dream big section -->
+  <section class="dream-big">
+    <div class="half-width">
+      <img src="./images/riaj-2.png" alt="dream picture">
+    </div>
+    <div class="half-width">
+      <h1>Dream Big</h1>
+      <h3>Become a Web Developer</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non quidem, vero distinctio optio sapiente molestias
+        libero, mollitia qui debitis, ducimus harum! Sequi eaque necessitatibus dolor alias, voluptatibus sunt at a.</p>
+      <div class="link-btn">
+        <a class="click-btn" href="https://www.google.com" target="_blank">Click Here</a>
       </div>
-    </sectionc>
-  </body>
+    </div>
+  </section>
+</body>
+
 </html>
