--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-  <section class="top-banner">
+  <section class="top-banner flexible-container">
     <div class="half-width">
       <!-- header text section -->
       <h1>Welcome to</h1>
-      <h1><span style="color: orange">Riajul Islam </span>World!</h1>
+      <h1><span class="orange-color">Riajul Islam </span>World!</h1>
       <h3>Building Climber and Train Stopper</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias
@@ -32,7 +32,7 @@
     </div>
   </section>
   <!-- here is the dream big section -->
-  <section class="dream-big">
+  <section class="dream-big flexible-container">
     <div class="half-width">
       <img src="./images/riaj-2.png" alt="dream picture">
     </div>
@@ -46,6 +46,26 @@
       </div>
     </div>
   </section>
+  <!-- here is experiences section -->
+  <section class="exp-section">
+    <h1>Experiences</h1><br><br>
+    <div class="flexible-container">
+      <div id="full-stack" class="half-width dev-card">
+        <h2>Full Stack Web Developer</h2>
+        <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui in, tempore distinctio culpa sequi obcaecati possimus saepe enim, quae quas ipsa blanditiis quam aut odio at ipsam corrupti veniam cum!</p>
+      </div>
+      <div id="baby-stack" class="half-width dev-card">
+        <h2>Baby Web Developer</h2>
+        <h3 class="orange-color">2021-2022 | Programming Hero Learner</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolorum exercitationem quam voluptatibus. Amet nulla aliquam consectetur sint voluptate earum optio dolorum maxime a quod animi, ipsa eaque cupiditate tenetur.</p>
+      </div>
+    </div>
+  </section>
+  <!-- footer section -->
+  <footer>
+    <h5 style="text-align: center; margin: 100px auto 10px;">All right reserved | Riajul Islam 2022</h5>
+  </footer>
 </body>
 
 </html>
